<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardUseCompatPadding="true"
        app:cardElevation="@dimen/_4sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="?actionBarSize"
                    android:fontFamily="@font/spawner_visbyroundcf_bold"
                    android:gravity="center"
                    android:text="@string/add_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#7F7F7F" />

            <com.festival.flyer.postermaker.view.MailER_AutoResizeEditText
                android:id="@+id/auto_fit_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_80sdp"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="top|start"
                android:hint="@string/add_text_here"
                android:imeActionLabel="Done"
                android:imeOptions="actionPrevious"
                android:inputType="textMultiLine"
                android:isScrollContainer="true"
                android:maxLength="250"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_15ssp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="10.0dip"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp">

                <RelativeLayout
                    android:id="@+id/btnCancelDialog"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_39sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:background="@drawable/spawner_rounded_border"
                    android:backgroundTint="#3F3F3F">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/spawner_visbyroundcf_bold"
                        android:text="@string/cancel"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btnAddTextSDialog"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_39sdp"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:background="@drawable/spawner_btn_rounded_text_bg">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/spawner_visbyroundcf_bold"
                        android:text="@string/add"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>