<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_margin="@dimen/_10sdp">

            <RelativeLayout
                android:id="@+id/native_banner_ad_containers"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:visibility="visible" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_view_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:shimmer_auto_start="true">

                <include layout="@layout/spawner_native_ad_layout"/>

            </com.facebook.shimmer.ShimmerFrameLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/spawner_visbyroundcf_bold"
                android:text="@string/design_saved"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="5.0dip"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/spawner_seprator_line"
            android:backgroundTint="@color/purple_200" />

        <TextView
            android:id="@+id/description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/spawner_visbyroundcf_medium"
            android:gravity="center_horizontal"
            android:text="@string/your_design_successfully_saved_in_my_poster"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.30"
                android:gravity="center">

                <TextView
                    android:id="@+id/btn_ok"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/spawner_btn_rounded_text_bg"
                    android:fontFamily="@font/spawner_visbyroundcf_bold"
                    android:gravity="center"
                    android:paddingLeft="@dimen/_40sdp"
                    android:paddingRight="@dimen/_40sdp"
                    android:text="@string/ok"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>